--- a/resources.qmd
+++ b/resources.qmd
@@ -15,6 +15,8 @@ It's finally time for an upgraded notebook! I've been Slacking myself (and subse
 
 * [The Sessions College Color Calculator](https://www.sessions.edu/color-calculator/), for creating color palettes
 
+* [Beautifully Annotated: Enhancing your ggplots with Text](https://www.cararthompson.com/talks/rl-cambridge-beautifully-annotated/), by [Cara Thompson](https://www.cararthompson.com/about.html), a seriously wonderful talk on using annotations in your ggplots
+
 ## `r fontawesome::fa("desktop", fill = "#64605F", a11y = "sem")` reporting & presentations
 
 * Quarto is all the rage these days (and by these days, I mean post-March 2022). Download and find some great tutorials [here](https://quarto.org/) to get started
