--- a/talks_workshops/2022-10-24-quarto-blogs/index.qmd
+++ b/talks_workshops/2022-10-24-quarto-blogs/index.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Adding a blog to your existing Quarto website"
 description: |
-  Got a Quarto website, but no blog? We can fix that!
+  got a Quarto website, but no blog? we can fix that!
 author:
   - name: Samantha Csik
     url: https://samanthacsik.github.io/
