--- a/posts/2024-03-31-data-viz-course/index.qmd
+++ b/posts/2024-03-31-data-viz-course/index.qmd
@@ -26,7 +26,7 @@ draft: true
 
 <br>
 
-It felt like running a marathon at sprint speed at times (okay, almost the whole time), but I just finished teaching my first(!!) graduate-level course for the [Master of Environmental Data Science](https://bren.ucsb.edu/masters-programs/master-environmental-data-science/academics-meds) (MEDS) program -- I'm so exhausted and so proud and I can't wait to (hopefully) do it again next year. While I've witnessed so many incredible colleagues successfully teach really rad courses in this program since it first began in 2021, I still felt like I was stepping into a large unknown. Now that I'm through the other side, I wanted to reflect on my process, experience, and considerations. I've learned so much (*seriously sooooo much*) from other educators who have openly shared their materials and ideas online, and writing this here is my small way of trying to give back to that community. I'll try to be as transparent as possible about all steps of this process.
+It felt like running a marathon at sprint speed at times (okay, almost the whole time), but I just finished teaching my first(!!) graduate-level course for the [Master of Environmental Data Science](https://bren.ucsb.edu/masters-programs/master-environmental-data-science/academics-meds) (MEDS) program -- I'm so exhausted and so proud and I can't wait to (hopefully) do it again next year. While I've witnessed many incredible colleagues successfully teach really rad courses in this program since it first began in 2021, I still felt like I was stepping into a large unknown. Now that I'm through the other side, I wanted to reflect on my process, experience, and considerations. I've learned so much (*seriously sooooo much*) from other educators who have openly shared their materials and ideas online, and writing this here is my small way of trying to give back to that community. I'll try to be as transparent as possible about all steps of this process.
 
 ## First, some context
 
@@ -73,70 +73,124 @@ knitr::include_graphics("media/NCEAS-hex.png")
 
 My only real guidelines were to beef up the technical skills / lessons -- the prior version of this course was highly conceptual and didn't involve much programming. Other than that, I was free to do what I wanted. And so, I set off on building my very first grad-level data science course. 
 
-## A general timeline (from start to finish)
+My extremely broad TODO list looked like this:
+
+1. [Figure out my preparation timeline](#timeline)
+2. [Build the course syllabus (incl. learning objectives, topics, schedule, policies)](#syllabus)
+3. [Decide how I will assess student success (i.e. grades)](#grades)
+4. [Determine how to build / organizing course materials](#course-materials)
+5. [Create assignments and figure out how best to distribute them](#assignments)
+
+I'll walk through each of these TODOs in a bit more detail, then end with some things that worked particularly well, things I'd like to do differently, and other musings.
+
+## My preparation timeline{#timeline}
 
 **I spent about 7 months sincerely preparing for and teaching EDS 240 (not including the application and interview process).** I recognize that's a loonnggg runway and that not every instructor is afforded the time or has the capacity to do the same (particularly lecturers). As an existing employee of the MEDS program whose responsibilities are largely centered around teaching, I was allowed the time and space to think deeply about this course. I'm a super nervous planner when it comes to anything work / teaching-related (hello, imposter syndrome!), so I personally needed this prep time to feel like I had things (sort of) under control. Here's how that timeline roughly shook out:
 
 ***Note:** I'm also including information about the application process here -- it was totally foreign to me, and while this is specific to UCSB / Bren, I imagine other institutions may follow a similar (somewhat lengthy) process.*
 
 - **April 2023:** Submitted my application for [Teaching Positions, Bren School of Environmental Science & Management](https://recruit.ap.ucsb.edu/JPF02448) -- this is a general call for [Unit 18 Faculty](https://ap.ucsb.edu/policies.and.procedures/red.binder/sections/%5B2_01%5D%20Unit%2018%20Faculty%20and%20Supervisor%20of%20Teacher%20Education%20Series.pdf) (also referred to as Lecturers). Applications require a cover letter, CV, Teaching Statement, and three references. You are asked to specify which course(s) you are interested in teaching.
-- **June 2023:** Interviewed -- this hour-long interview began with a 10min teaching demo followed by ~5min of Q&A. Your demo must be related to the topic area of the course you're intending to teach (i.e. in my case, it needed to be about data viz). I chose to do a live-coding demo, since my vision for EDS 240 would involve a lot of that.
+- **June 2023:** Interviewed -- this hour-long interview began with a 10min teaching demo followed by ~10min of Q&A. Your demo must be related to the topic area of the course you're intending to teach (i.e. in my case, it needed to be about data viz). I chose to do a live coding demo, since my vision for EDS 240 would involve a lot of that (see [Nederbragt et al. (2020)](tps://doi.org/10.1371/journal.pcbi.1008090) for more on this teaching technique).
 - **September 2023:** Signed my contract. After negotiations, I ended up at 50% time in my typical full-time role (Data Training Coordinator, more formally classified as Academic Coordinator I), 33% time as Unit 18 Lecturer, and 17% time for curriculum development. It's important to note that these appointments are for the quarter in which the course is taught *only* (e.g. winter quarter, Jan - Mar 2024). The lecturer salary scale is higher than than my current full-time salary, so this split appointment meant I would earn a bit more during winter quarter.
-- **September - November 2023:** While my appointment didn't officially start until January, I spent about 30-40hrs/week prepping for the class (which is a lot of time...this is not an attempt to applaud "the grind," but rather reflect how this experience played out for me). I focused primarily on the syllabus, grading structure, drafting high-level outlines of weekly topics, building the skeleton of the course website, and learning other necessary classroom management tools (I'll elaborate more on all of these in the next sections). I was able to prep ~2 of 4 homework assignments (plus jot down ideas for others), and even a couple early lectures. I also spent ~20hrs/week teaching my typical fall workshops, reviewing / updating materials for [EDS 430: Intro to Shiny](https://ucsb-meds.github.io/EDS-430-Intro-to-Shiny/) (a 2-day short course that I also teach in winter quarter), and other MEDS administrative stuff.
-- **December 2023:** Oof, this was definitely the hardest month out of the whole experience -- while most folks were winding down after a busy fall quarter, I felt like I had to ramp up (more so than I already had been). I was also tired from a stacked fall and wanted so desperately for a break that I felt like I couldn't really take. I was also coming to terms with the fact I would absolutely not have the whole course planned / materials created ahead of the January 8th start date ({{< fa face-grin-beam-sweat title="a grinning face with a drop of sweat dripping from it's brow" >}} yes, that was incredibly naive thinking on my part). I *did* hope to have materials / plans for the first 6 weeks of the quarter largely created -- I would also be teaching my (shorter) Shiny course and helping to facilitate NCEAS' annual [Environmental Data Science Summit](https://www.nceas.ucsb.edu/environmental-data-science-summit) during this first half of the quarter and was genuinely worried about not having enough time to do it all.
-- **January - March 2023:** Here we go! By this point, I had weeks 1-4 fully planned, weeks 5-6 outlined(ish), and weeks 7-10 were largely untouched (aside from having scheduled Allison Horst's guest lecture on using Observable JS to create interactive viz during week 9!). I tried my best to work ahead to continue prepping future lectures / assignments / etc. but this wasn't totally sustainable. By ~mid-quarter, I had about a week to prepare for an upcoming class (though it generally got easier to prep as the quarter went on, since I would accumulate lots of resources and ideas for future lessons while building earlier lectures.)
+- **September - November 2023:** While my appointment didn't officially start until January, I spent about 30-40hrs/week prepping for the class (which is a lot of time...this is not an attempt to applaud "the grind," but rather reflect how this experience played out for me). I focused primarily on the syllabus, grading structure, drafting high-level outlines of weekly topics, building the skeleton of the course website, and learning other necessary classroom management tools (I'll elaborate more on all of these in the next sections). I was able to prep ~2 of 4 homework assignments (plus jot down ideas for others), and even a couple early lectures. I also spent ~30hrs/week teaching my typical fall workshops, reviewing / updating materials for [EDS 430: Intro to Shiny](https://ucsb-meds.github.io/EDS-430-Intro-to-Shiny/) (a 2-day short course that I also teach in winter quarter), and other MEDS administrative stuff.
+- **December 2023:** Oof, this was definitely the hardest month out of the whole experience -- while most folks were winding down after a busy fall quarter, I felt like I had to ramp up (more so than I already had been). I was also tired from a stacked fall and wanted so desperately for a break that I felt like I couldn't really take. I was also coming to terms with the fact I would absolutely not have the whole course planned / materials created ahead of the January 8th start date ({{< fa face-grin-beam-sweat title="a grinning face with a drop of sweat dripping from it's brow" >}} yes, that was incredibly naive thinking on my part). I *did* hope to have materials / plans for the first 6 weeks of the quarter largely created -- I had a number of other non-EDS 240 events, teaching, and responsibilities during this first half of the quarter and I was genuinely worried about not having enough time to do it all.
 
-## Where does one even start when building a syllabus?
+- **January - March 2023:** Here we go! By this point, I had weeks 1-4 fully planned, weeks 5-6 outlined(ish), and weeks 7-10 were largely untouched (aside from having scheduled [Allison Horst](https://github.com/allisonhorst/)'s guest lecture on using Observable JS to create interactive viz during week 9!). I tried my best to work ahead and continue prepping future lectures / assignments / etc. but this wasn't totally sustainable. By ~week 5, I was prepping each lecture the week before delivering it. That said, I had compiled so many resources and jotted down so many random ideas as I came across things, that creating new lectures did get a bit easier as time went on.
 
-This was probably the most intimidating part, given that it's the one place to comprehensively describe all aspects of course proceedings -- from (tentative) topics covered to assignment due dates, and grading schemes to course policies. **I chose to begin with defining the course's learning objectives, i.e. what I wanted all students to feel comfortable with / confident in by the end of the course.** It was really important to me that I blended both technical skills (e.g. using `{ggplot2}`) with information design theory and a solid conceptual understanding of what makes a good data visualization.
+## Building the course syllabus{#syllabus}
 
-I knew I'd be teaching `{ggplot2}` as the data viz package / tool of choice throughout the course (partly because it's the tool I know how to use best, but also because I think `{ggplot2}` is one of the greatest, most well-supported tools out there for creating data viz). However, it was also super important to me that I blended technical skills with information design / data viz theory
+This was probably the most intimidating part, given that it's the one place to comprehensively describe all aspects of course proceedings -- from (tentative) topics covered to assignment due dates, and grading schemes to course policies. **I chose to begin with defining the course's learning objectives, i.e. what I wanted all students to feel comfortable with / confident in by the end of the course.** It was really important to me that I blended both technical skills (e.g. using `{ggplot2}`) with information design theory and a solid conceptual understanding of what makes a good data visualization (i.e. transferable knowledge, regardless of the programming language / data viz tool of choice).
 
+After a lot of iterating, seeking feedback from a mix of past MEDS students (now NCEAS data scientists) and other NCEAS educators, I ended up with a list of six learning objectives (check out the [syllabus](https://docs.google.com/document/d/1iv-bsakUA-7FDSZCt0Qq1TUYXBzq0cktzLlxV2AxhZc/edit#heading=h.thw5uolxraye) to see what they are!). **Next, I began mapping out tentative topics by date**, being mindful of holidays, large non-EDS 240 deadlines (e.g. [MEDS Capstone](https://bren.ucsb.edu/masters-programs/master-environmental-data-science/meds-capstone-projects) faculty reviews), and the skills we'd need to cover ahead of distributing each new homework assignment. This schedule was a detailed draft at best -- topics were shifted around a bit (e.g. I couldn't always cover as much as I planned in a given class) or dropped entirely as the quarter went on -- but it was an important starting point / road map for me a to return to as I moved through the planning process.
 
+**After these pieces were drafted up, I started filling in the remaining (large) gaps: course policies, grading structure, student resources, etc.** The syllabus was in a constant state of revision right up until the start of the course, but getting that first draft squared away felt like a *huge* accomplishment and it served as my North Star when I finally began creating course materials.
 
-After a lot of iterating, seeking feedback from a mix of past MEDS students (now NCEAS data scientists) and NCEAS educators, I ended up with a list of six learning objectives (check out the [syllabus](https://docs.google.com/document/d/1iv-bsakUA-7FDSZCt0Qq1TUYXBzq0cktzLlxV2AxhZc/edit#heading=h.thw5uolxraye) to see what they are!)
+## Deciding to implement specifications (specs) grading{#grades}
 
-- technical skills (ggplot2) but also theory/conceptual stuff which is largely transferable
+A conversation [Nate Emery](https://www.citral.ucsb.edu/people/nate-emery), the STEM Education Coordinator at UCSB's [Center for Innovative Teaching, Research, and Learning](https://www.citral.ucsb.edu/home) inspired me to explore alternative grading approaches for this course. He had passed me a copy of [Grading for Growth: A Guide to Alternative Grading Practices That Promote Authentic Learning and Student Engagement in Higher Education](https://www.amazon.com/Grading-Growth-Alternative-Practices-Engagement/dp/1642673811), by David Clark & Robert Talbert (also check out the [Grading for Growth Substack](https://gradingforgrowth.com/)) and some other awesome case studies / resources, which I dove into for the better portion of August 2023. **I decided to implement a version of specifications (specs) grading for EDS 240.** Generally speaking, specs grading refers to: 
 
-mindful of holidays, other due dates capstone
+<br>
 
-- learning objectives
-- schedule of classes
-- tentative topics by date
+>*“an alternative grading method where instructors create a **list 
+of specifications that describe the qualities and characteristics of a successful 
+submission** for an assignment. Student work is **graded holistically** based on 
+those specifications, earning a single mark: “Satisfactory” or “Not Yet”. Students 
+have the **chance to use feedback** by revisiting and resubmitting for full credit.”* 
 
-## How will student success be measured?
+::: {.right-align-text .small-text}
+*-expert from “Grading for Growth: A Guide to Alternative Grading 
+Practices That Promote Authentic Learning and Student Engagement in 
+Higher Education”, by David Clark & Robert Talbert*
+:::
 
-- alternative grading
-- tokens
+<br>
 
-How do you distribute materials?
+Why implement something like specs grading? **“Traditional” grading (assigning points to one-time assessments and aggregating those points into a letter grade for a course) comes with a variety of challenges:**
+
+- It **lacks feedback loops** -- there are (often) no reattempts or revisions of work based on feedback, making it difficult for students to demonstrate (and instructors to assess) learning or growth
+- It disproportionately **benefits students who learn fast**, or who already have familiarity with the material
+- Traditional grades are **bias-prone** (e.g. awarding participation points, granting deadline extensions)
+- It can be **demotivating** and discourage students from learning for its own sake (motivation often comes from “chasing the A,” rather than learning and growing)
+- It can **promote unhealthy student-instructor relationships**
+
+In EDS 240, students earned either a “Satisfactory” or “Not Yet” mark on each assignment based on whether or not they met all rubric specifications (which are provided alongside each assignment). Students could trade in tokens to revise / resubmit assignments based on instructor feedback, for assignment extensions, or to miss class. Students earned tokens (primarily) by attending discussion section each week. **The Grade Tracker below, summarizes the different types of assignments, how students can earn and use tokens, and how to calculate your course grade based on the number of "Satisfactory" grades received:**
+
+<!-- ::: {.center-text} -->
+<!-- **An overview of course assignments and the specs grading implementation that I used in EDS 240 is summarized in the Grade Tracker, below:**  -->
+<!-- ::: -->
+
+```{r}
+#| eval: true
+#| echo: false
+#| out-width: "60%"
+#| fig-align: "center"
+knitr::include_graphics("media/grade-tracker-green.png")
+```
+
+::: {.center-text .small-text}
+*The EDS 240 Grade Tracker was inspired by and adapted from the syllabus for BIO SCI E106 Lec A (Processes in Ecology and Evolution, Winter 2022), by [Dr. Celia Faiola](https://faculty.sites.uci.edu/cfaiola/people/) & [Dr. Celia Symons](https://www.symonslab.com/people)*
+:::
+
+I would be lying if I said that I wasn't **incredibly nervous** to try this out. While all the literature I had explored got me super jazzed about the idea of specs grading, it *is* quite different than what our students are used to...and **change can feel disruptive**. I spent the first full hour of our (3 hour-long) first class laying out this grading structure, the accompanying token system, and expectations (and of course, answering many questions).
+
+Benefits:
+- know what your grade is at any given point in time
+- if you don't care about the + or the A, you can decide how to spend your energy
+- no haggling over points
+- revise / resubmit (also spreads out grading)
+
+Quotes from students.
+
+## How do you distribute materials?{#course-materials}
 
 - course website
 - google slides vs. quarto slides
 
-## How do you distribute assessments?
+## How do you distribute assessments?{#assignments}
 
 - github classroom
 
-## Misc. things to learn / consider:
+## Other stuff
+
+#### Misc. things to learn / consider:
 
 - canvas
 - spreadsheets for tracking
 - egrades
 
-## Random things that are worthwhile to do: 
+#### Things I've learned
 
-- hws take a long time to come up with!
+- hws take a long time to come up with! need to streamline these
 - keep all the cool resources that you use and those that you don't!
 - later lectures are easier bc I saved so many resources along the way
-
-Things I've learned:
 - 3 hrs is long (for students)
 - too much content (i always overestimate)
 - make more time to run through materials
+- create qmd templates -- live coding is great, but coding every single thing takes a lot of time; it's a balance of getting that practice while also getting through enough material; having some code pre-written in templates might be the way to go next year
 
-## Other musings:
+#### Other musings:
 
+- specs grading worked great for me (grad students, 31 MEDS 6 non-MEDS, 37 total)
 - you forget stuff that you made a while ago
 - there's no such thing as part time lecturering, at least for your first year teaching a course. Most other responsibilities had to be put on hold, and I was working ~80hr weeks throughout winter quarter
 - follow up with students when they have questions!
